@@ -4,8 +4,8 @@ Brent is now at Panasas, Inc.
 See the file "license.terms" for information on usage and redistribution
 of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 
-Version: 3.4.1
-Last Modified: Fri Aug 30 17:07:23 PDT 2002
+Version: 3.4.2
+Last Modified: Tue Sep  3 15:05:00 PDT 2002
 
 QUICK START
 
