@@ -25,7 +25,7 @@ PACKAGE=tclhttpd
 
 MAJOR_VERSION=3
 MINOR_VERSION=4
-PATCHLEVEL=".1"
+PATCHLEVEL=".2"
 
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
 NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}
