@@ -1,5 +1,5 @@
 package provide httpd::version 3.4
 proc Httpd_Version {} {
     global Httpd
-    set Httpd(version)	"3.4.1 August 30, 2002"
+    set Httpd(version)	"3.4.2 September 3, 2002"
 }
