@@ -1,3 +1,15 @@
+2002-09-03  Brent Welch <welch@panasas.com>
+        * (In the tclhttpd-3-4-rel branch).
+        * bin/httpdthread.tcl: Fixed custom code loader to skip pkgIndex.tcl
+        files.
+        * htdocs/index.html: Fixed a few errors pointed out by Larry Virden
+        * htdocs/forms/posttest.tml: Added comments that explain this form.
+        * DIST_build/DIST: moved the copying of some things into the htdocs
+        tree from the Makefile to the distribution creation script.
+        * configure.in:
+        * README
+        * lib/version.tcl: Changed to 3.4.2 (sigh)
+
 2002-08-30  Brent Welch <welch@panasas.com>
         * (In the tclhttpd-3-4-rel branch).
         * Modified Auth_Check, which is used by DocAccessHook, to
